kuber/kuber-monitor.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: cadvisor
  labels:
    app: cadvisor
spec:
  selector:
    matchLabels:
      app: cadvisor
  template:
    metadata:
      labels:
        app: cadvisor
    spec:
      containers:
      - name: cadvisor
        image: gcr.io/cadvisor/cadvisor:latest
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: 200m
            memory: 512Mi
          requests:
            cpu: 100m
            memory: 256Mi
        volumeMounts:
        - name: cgroup
          mountPath: /cgroup
        - name: var-run
          mountPath: /var/run
        - name: var-lib-docker
          mountPath: /var/lib/docker
        - name: var-lib-kubelet
          mountPath: /var/lib/kubelet
        - name: sys
          mountPath: /sys
      volumes:
      - name: cgroup
        hostPath:
          path: /cgroup
      - name: var-run
        hostPath:
          path: /var/run
      - name: var-lib-docker
        hostPath:
          path: /var/lib/docker
      - name: var-lib-kubelet
        hostPath:
          path: /var/lib/kubelet
      - name: sys
        hostPath:
          path: /sys
---
apiVersion: v1
kind: Service
metadata:
  name: cadvisor
spec:
  type: ClusterIP
  ports:
  - port: 8081         # Port yang dapat diakses
    targetPort: 8080   # Port di dalam container cAdvisor
  selector:
    app: cadvisor
---


# DaemonSet untuk Node Exporter
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: node-exporter
  labels:
    app: node-exporter
spec:
  selector:
    matchLabels:
      app: node-exporter
  template:
    metadata:
      labels:
        app: node-exporter
    spec:
      containers:
      - name: node-exporter
        image: quay.io/prometheus/node-exporter:latest
        ports:
        - containerPort: 9100
        resources:
          limits:
            cpu: 100m
            memory: 200Mi
          requests:
            cpu: 50m
            memory: 100Mi
      hostNetwork: true
      # Node Exporter perlu akses ke host filesystem
      volumeMounts:
      - name: proc
        mountPath: /host/proc
        readOnly: true
      - name: sys
        mountPath: /host/sys
        readOnly: true
      - name: root
        mountPath: /host/root
        readOnly: true
      volumes:
      - name: proc
        hostPath:
          path: /proc
      - name: sys
        hostPath:
          path: /sys
      - name: root
        hostPath:
          path: /
---
# Service untuk Node Exporter
apiVersion: v1
kind: Service
metadata:
  name: node-exporter
spec:
  type: ClusterIP
  ports:
  - port: 9100         # Port yang dapat diakses
    targetPort: 9100   # Port di dalam container Node Exporter
  selector:
    app: node-exporter
